--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+Cython==3.0.12
 MouseInfo==0.1.3
+numpy==2.2.5
+opencv-python==4.11.0.86
+pillow==11.2.1
 PyAutoGUI==0.9.54
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
